--- a/assets/style.css
+++ b/assets/style.css
@@ -80,6 +80,13 @@ img {
 	min-width: 450px;
 }
 
+img:hover {
+	box-shadow: 0 0 20px var(--Font_Dark_blue);
+}
+
+img:focus {
+	border-width: 10px;
+  }
 #surfBoardStyle {
 	width: 100%;
 	max-height: 600px;
@@ -135,6 +142,9 @@ p {
 .push_box_left {
 	margin-right: 1050px;
 }
+.push_box_left_02 {
+	margin-right: 1150px;
+}
 
 footer {
 	color: var(--Font_Dark_blue);
@@ -149,18 +159,6 @@ footer {
 footer ul a {
 	color: var(--Font_Dark_blue);
     text-decoration:underline;
-}
-/* using a mobile-first approach, set base column width to be 100% and we'll update it using media queries for larger screen sizes */
-.card-column {
-	flex: 1 0 100%;
-	/* padding: 1.5rem; */
-	/* when the screen resizes, make it so our columns don't jump in size */
-	transition: flex-basis 500ms linear;
-	/* margin-bottom: 1.5rem; */
-	margin: 1.5rem;
-	background-image: linear-gradient( rgba(232, 102, 236, 0.3) 0%, rgba(232, 102, 236, 0.6) 100% );
-	text-align: left;
-
 }
 
 
